--- a/homepage/homepage-books/homepage-books.component.html
+++ b/homepage/homepage-books/homepage-books.component.html
@@ -37,11 +37,11 @@
       <div class="w3-col m3">
         <div class="w3-card w3-round w3-white">
           <div class="w3-container">
-            <h4 class="w3-center">Search...</h4>
-            <hr />
-            <p>Book Title</p>
-            <button>
-              <form [formGroup]="form">
+            <form [formGroup]="form">
+              <h4 class="w3-center">Search...</h4>
+              <hr />
+              <p>Book Title</p>
+              <button>
                 <input
                   type="search"
                   required
@@ -50,19 +50,20 @@
                   formControlName="filter"
                   (input)="(this.form.value.filter)"
                 />
-              </form>
-            </button>
-            <p></p>
-            <p>Author Name</p>
-            <button>
-              <input
-                type="search"
-                required
-                class="form-control"
-                placeholder="Search Author Name!"
-              />
-            </button>
-            <p></p>
+              </button>
+              <p></p>
+              <p>Author Name</p>
+              <button>
+                <input
+                  type="search"
+                  required
+                  class="form-control"
+                  placeholder="Search Author Name!"
+                  formControlName="author"
+                />
+              </button>
+              <p></p>
+            </form>
 
             <p>Categories</p>
             <p></p>
@@ -88,12 +89,15 @@
         </div>
         <br />
       </div>
-
       <div class="w3-col m9">
         <div class="w3-row-padding">
           <div class="w3-col m12">
             <div class="w3-card w3-round w3-white">
-              <app-booktable [bookMenu]="true"></app-booktable>
+              <app-booktable
+                [bookMenu]="true"
+                [filterData]="this.form.value.filter"
+                [authorFilter]="this.form.value.author"
+              ></app-booktable>
             </div>
           </div>
         </div>
