--- a/homepage/homepage.component.html
+++ b/homepage/homepage.component.html
@@ -138,19 +138,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://media.graphassets.com/J8yddzHqT1m4PJEX9ABj);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: More Miracle Than Bird</p>
+                <p>Author: Alice Miller</p>
               </div>
             </div>
           </div>
@@ -159,19 +154,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://blog-cdn.reedsy.com/directories/admin/attachments/large_ce5d4ed6f53d69535c1893a3e14cb41e.jpg);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: To Sleep in a Sea of Stars</p>
+                <p>Author: Christopher Paolini</p>
               </div>
             </div>
           </div>
@@ -180,19 +170,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://i.pinimg.com/236x/35/66/dc/3566dc24c327c144d18dffbac7145d28--mark-watney-dust-storm.jpg);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: The Martian</p>
+                <p>Author: Andy Weir</p>
               </div>
             </div>
           </div>
@@ -202,19 +187,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQwe0e4SKlUPQRXBWD-NBpIV0tEpTsiceW0Pvuq1w9trnz0D1ydlycpTIPW9RECZ8WaVco&amp;usqp=CAU);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: More Miracle Than Bird</p>
+                <p>Author: Alice Miller</p>
               </div>
             </div>
           </div>
@@ -230,19 +210,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://static01.nyt.com/images/2014/02/05/books/05before-and-after-slide-T6H2/05before-and-after-slide-T6H2-superJumbo.jpg?quality=75&amp;auto=webp&amp;disable=upscale);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: More Miracle Than Bird</p>
+                <p>Author: Alice Miller</p>
               </div>
             </div>
           </div>
@@ -251,19 +226,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://cdn.pastemagazine.com/www/system/images/photo_albums/30-best-book-covers-2016/large/2vegetariancover.png?1384968217);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: The Vegetarian</p>
+                <p>Author: Han Kang</p>
               </div>
             </div>
           </div>
@@ -272,19 +242,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://creativereview.imgix.net/content/uploads/2020/12/AlexKirbyanger.jpg?auto=compress,format&amp;q=60&amp;w=1200&amp;h=1870);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: Anger</p>
+                <p>Author: Barbara H. Rosenwein</p>
               </div>
             </div>
           </div>
@@ -294,19 +259,14 @@
           <div class="container">
             <div
               class="front"
-              style="background-image: url(https://unsplash.it/500/500/)"
-            >
-              <div class="inner">
-                <p>Diligord</p>
-                <span>Lorem ipsum</span>
-              </div>
-            </div>
+              style="
+                background-image: url(https://m.media-amazon.com/images/I/41ocVj1eR9L._SL500_.jpg);
+              "
+            ></div>
             <div class="back">
               <div class="inner">
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                  Alias cum repellat velit quae suscipit c.
-                </p>
+                <p>Title: Crying in H Mart</p>
+                <p>Author: Michelle Zauner</p>
               </div>
             </div>
           </div>
