--- a/homepage/homepage.component.scss
+++ b/homepage/homepage.component.scss
@@ -93,14 +93,15 @@ h1{
 .front,
 .back{
   background-size: cover;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.25);
+  box-shadow: 0 4px 8px 0 rgb(255, 255, 255);
   border-radius: 10px;
 	background-position: center;
 	-webkit-transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
 	transition: -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
 	-o-transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
 	transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
-	transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1), -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
+	transition: transform .7s cubic-bezier(0.4, 0.2, 0.2, 1),
+  -webkit-transform .7s cubic-bezier(0.4, 0.2, 0.2, 1);
 	-webkit-backface-visibility: hidden;
 	        backface-visibility: hidden;
 	text-align: center;
@@ -128,7 +129,6 @@ h1{
     content: '';
     display: block;
     opacity: .6;
-    background-color: #000;
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
     border-radius: 10px;
