--- a/src/app/homepage/search-modal/search-modal.component.html
+++ b/src/app/homepage/search-modal/search-modal.component.html
@@ -7,7 +7,7 @@
         <br />
         <p bold="true">
           Dear Student, Here you will be in able to find every book with description.
-          If our library does not support it but you wat to get that book, Please send
+          If our library does not support it but you want to get that book, Please send
           us an email . Thank You !
         </p>
       </div>
