--- a/src/app/admin/dashboard/dashboard.component.scss
+++ b/src/app/admin/dashboard/dashboard.component.scss
@@ -1,4 +1,3 @@
-
 table {
     width: 800px;
   }
@@ -99,4 +98,19 @@ table {
     display: flex;
     justify-content: center;
     margin-top: 100px;
+}
+
+.yesButton{
+    margin-left: 110px;
+    background-color: green;
+    color: white;
+    width: 2.5cm
+
+}
+.noButton{
+    margin: 10px;
+    background-color: red;
+    color: white;
+    width: 2.5cm
+
 }
