--- a/admin/books-list/books-list.component.html
+++ b/admin/books-list/books-list.component.html
@@ -1,15 +1,17 @@
-<div class="container mt-5 px-0">
+<div class="container mt-0 px-0">
   <div class="mb-2 d-flex justify-content-between align-items-center">
-    <div class="position-relative">
+    <mat-form-field class="search">
+      <mat-label>Filter</mat-label>
       <form [formGroup]="form">
         <input
-          type="text"
-          placeholder="filter"
+          matInput
+          placeholder="Ex. ium"
+          #inputItem
           formControlName="filter"
           (input)="searchArray(this.form.value.filter, allData)"
         />
       </form>
-    </div>
+    </mat-form-field>
     <button
       mat-button
       color="primary"
@@ -83,7 +85,7 @@
           <tr>
             <td>
               <p class="color">
-                {{ dateVal | date : "d/M/y HH:mm:ss" }}
+                {{ dateVal | date : "d/M/y" }}
               </p>
             </td>
             <td>{{ item.BookName }}</td>
@@ -100,13 +102,11 @@
               </button>
             </td>
           </tr>
-
           <thead></thead>
         </tbody>
       </table>
     </div>
   </div>
-
   <div class="container mt-5 px-2"></div>
 
   <app-delete-modal
