--- a/admin/books-list/books-list.component.scss
+++ b/admin/books-list/books-list.component.scss
@@ -2,7 +2,7 @@
     width: 600px;
 }
 .text-center {
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 .error{
@@ -44,4 +44,12 @@
     margin: 20px;
     background-color: green;
     color: white;
+}
+.col-md-6{
+    width: 100%;
+}
+.search{
+    width:300px;
+    display: flex;
+    padding-left: 20px;
 }
