--- a/admin/students-list/students-list.component.scss
+++ b/admin/students-list/students-list.component.scss
@@ -45,3 +45,9 @@
     display: flex;
     justify-content: center;
   }
+
+  .search{
+    width:300px;
+    display: flex;
+    padding-left: 20px;
+}
