--- a/src/app/admin/students-list/students-list.component.html
+++ b/src/app/admin/students-list/students-list.component.html
@@ -98,6 +98,81 @@
     <div class="mb-5 d-flex justify-content-between align-items-center"></div>
   </mat-dialog-content>
 </ng-template>
+<ng-template #edit>
+  <mat-dialog-content>
+    <div class="col-md-6">
+      <div class="container mt-2 px-6">
+        <h1
+          class="mb-5 d-flex justify-content-between align-items-center"
+          style="color: green"
+        >
+          Edit a student!
+        </h1>
+        <div class="mb-2 d-flex justify-content-between align-items-center">
+          <div class="position-relative">
+            <form [formGroup]="editForm" class="was-validated">
+              <div class="mb-2">
+                <h3>Student Id</h3>
+                <input
+                  type="text"
+                  class="form-control valid"
+                  id="id"
+                  formControlName="idedit"
+                  placeholder="Id"
+                  required
+                  minlength="5"
+                />
+              </div>
+
+              <div class="mb-3">
+                <h3>Username</h3>
+                <input
+                  type="text"
+                  class="form-control valid"
+                  id="username"
+                  formControlName="usernameedit"
+                  placeholder="Username"
+                  required
+                  minlength="3"
+                />
+              </div>
+              <div class="mb-3">
+                <h3>Password</h3>
+                <input
+                  type="text"
+                  class="form-control valid"
+                  id="password"
+                  formControlName="passwordedit"
+                  placeholder="Password"
+                  required
+                  ngModel
+                  minlength="3"
+                />
+              </div>
+
+              <div *ngIf="!form.valid" class="error">
+                <p>Please complete the required placeholders!</p>
+              </div>
+              <hr />
+              <button
+                type="button"
+                class="btn btn-primary"
+                href="#"
+                routerLinkActive="active"
+                [disabled]="!editForm.valid"
+                mat-dialog-close
+                (click)="editStudent()"
+              >
+                Edit student !
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="mb-5 d-flex justify-content-between align-items-center"></div>
+  </mat-dialog-content>
+</ng-template>
 
 <div class="scss" *ngIf="loading | async; else loadingSpinner">
   <div class="table-wrapper-scroll-y my-custom-scrollbar">
@@ -137,7 +212,7 @@
               mat-raised-button
               type="button"
               class="btn btn-primary mr-1"
-              (click)="openDialogWithTemplateRef(myDialog, true)"
+              (click)="openDialogWithTemplateRef(edit, item)"
             >
               EDIT
             </button>
