--- a/src/app/homepage/homepage-books/homepage-books.component.html
+++ b/src/app/homepage/homepage-books/homepage-books.component.html
@@ -35,49 +35,53 @@
   >
     <div class="w3-row">
       <div class="w3-col m3">
-        <form class="w3-card w3-round w3-white">
+        <form class="w3-card w3-round w3-white" [formGroup]="form">
           <div class="w3-container">
-            <form [formGroup]="form">
-              <h4 class="w3-center">Search...</h4>
-              <hr />
-              <p>Book Title</p>
-              <button>
-                <input
-                  type="search"
-                  required
-                  class="form-control"
-                  placeholder="Search Book Title!"
-                  formControlName="filter"
-                  (input)="(this.form.value.filter)"
-                />
-              </button>
-              <p></p>
-              <p>Author Name</p>
-              <button>
-                <input
-                  type="search"
-                  required
-                  class="form-control"
-                  placeholder="Search Author Name!"
-                  formControlName="author"
-                />
-              </button>
-              <p></p>
-            </form>
+            <h4 class="w3-center">Search...</h4>
+            <hr />
+            <p>Book Title</p>
+            <button>
+              <input
+                type="search"
+                required
+                class="form-control"
+                placeholder="Search Book Title!"
+                formControlName="filter"
+                (input)="(this.form.value.filter)"
+              />
+            </button>
+            <p></p>
+            <p>Author Name</p>
+            <button>
+              <input
+                type="search"
+                required
+                class="form-control"
+                placeholder="Search Author Name!"
+                formControlName="author"
+              />
+            </button>
+            <p></p>
 
             <p>Categories</p>
             <p></p>
             <mat-form-field appearance="fill">
               <mat-label>Select an option</mat-label>
-              <mat-select disableRipple>
-                <mat-option value="1">--</mat-option>
-                <mat-option value="2">Adventure stories</mat-option>
-                <mat-option value="3">Classics</mat-option>
-                <mat-option value="2">Crime</mat-option>
-                <mat-option value="2">Fantasy</mat-option>
-                <mat-option value="2">Historical fiction</mat-option>
-                <mat-option value="2">Horror</mat-option>
-                <mat-option value="2">Humour and satire</mat-option>
+              <mat-select disableRipple formControlName="category">
+                <mat-option value="">--</mat-option>
+                <mat-option value="Adventure stories"
+                  >Adventure stories</mat-option
+                >
+                <mat-option value="Classics">Classics</mat-option>
+                <mat-option value="Crime">Crime</mat-option>
+                <mat-option value="Fiction">Fiction</mat-option>
+                <mat-option value="Historical fiction"
+                  >Historical fiction</mat-option
+                >
+                <mat-option value="Horror">Horror</mat-option>
+                <mat-option value="Humour and satire"
+                  >Humour and satire</mat-option
+                >
               </mat-select>
             </mat-form-field>
             <p></p>
@@ -99,6 +103,7 @@
                 [bookMenu]="true"
                 [filterData]="this.form.value.filter"
                 [authorFilter]="this.form.value.author"
+                [category]="this.form.value.category"
               ></app-booktable>
             </div>
           </div>
