--- a/src/app/booktable/booktable.component.html
+++ b/src/app/booktable/booktable.component.html
@@ -3,30 +3,27 @@
   *ngIf="loading | async; else loadingSpinner"
 >
   <h1 style="color: rgb(214, 168, 108); margin-left: 450px">Books List</h1>
-  <div *ngIf="this.user">
-    <div *ngIf="this.user.role === 'admin'">
-      <button mat-button style="color: green" (click)="getFree()">Free</button
-      ><button mat-button style="color: orange" (click)="getReserved()">
-        Reserved</button
-      ><button mat-button style="color: red" (click)="getOverdue()">
-        Overdue
-      </button>
-    </div>
+  <div *ngIf="this.user.role === 'admin'">
+    <button mat-button style="color: green" (click)="getFree()">Free</button
+    ><button mat-button style="color: orange" (click)="getReserved()">
+      Reserved</button
+    ><button mat-button style="color: red" (click)="getOverdue()" >
+      Overdue 
+    </button>
   </div>
   <hr />
   <div class="table-wrapper-scroll-y my-custom-scrollbar">
     <table class="table table-bordered table-striped mb-0">
       <div class="imageContainer" *ngIf="allData.length">
-        
-        <div *ngFor="let item of allData | unique: 'BookName'">
+        <div *ngFor="let item of allData">
           <div *ngIf="item.status === 'reserved'">
             <mat-card class="{{ inactiveClass }}" (click)="openDialog(item)">
-              <img class="img" src="{{ item.img }}" />
+              <img class="img" src="{{ item.img }}"/>
             </mat-card>
           </div>
           <div *ngIf="item.status === 'free'">
             <mat-card class="card" (click)="openDialog(item)">
-              <img class="img" src="{{ item.img }}" />
+              <img class="img" src="{{ item.img }}"/>
             </mat-card>
           </div>
         </div>
