--- a/src/app/homepage/homepage-books/homepage-books.component.html
+++ b/src/app/homepage/homepage-books/homepage-books.component.html
@@ -69,18 +69,14 @@
               <mat-label>Select an option</mat-label>
               <mat-select disableRipple formControlName="category">
                 <mat-option value="">--</mat-option>
-                <mat-option value="Adventure stories"
-                  >Adventure stories</mat-option
+                <mat-option value="Drama"
+                  >Drama</mat-option
                 >
-                <mat-option value="Classics">Classics</mat-option>
-                <mat-option value="Crime">Crime</mat-option>
+                <mat-option value="Families">Families</mat-option>
+                <mat-option value="Science">Science</mat-option>
                 <mat-option value="Fiction">Fiction</mat-option>
-                <mat-option value="Historical fiction"
-                  >Historical fiction</mat-option
-                >
-                <mat-option value="Horror">Horror</mat-option>
-                <mat-option value="Humour and satire"
-                  >Humour and satire</mat-option
+                <mat-option value="Biography"
+                  >Biography & Autobiography</mat-option
                 >
               </mat-select>
             </mat-form-field>
